# pico-nes-hdmi-dual-controller

./: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
.github/workflows/: validate.yml
docs/: build.md  hardware.md  roadmap.md
hardware/controllers/: wiring.md
hardware/hdmi/: README.md
include/: controller.h  hdmi_video.h  nes_core.h  project_config.h
scripts/: fetch_dependencies.ps1
src/: CMakeLists.txt  controller.c  hdmi_video.c  main.c  nes_core_stub.c
